landing Page content added

--- a/frontend/src/app/contact-us/contact-us.component.html
+++ b/frontend/src/app/contact-us/contact-us.component.html
@@ -14,13 +14,13 @@
         We’d love to hear from you. Send us a message and we’ll respond as soon as possible.</p>
     </div>
     <div class="row mt-2 mb-3 justify-content-center mt-2">
-      <div class="col-md-5 col-xs-12 px-3 m-2">
+      <div class="col-md-5 col-xs-12 px-3 mt-3 mx-2">
         <h3>Digicologies Software Pvt Ltd.</h3>
         <p><i class="fas fa-phone fa-lg mr-4 icon-light"></i><span class="address-text">9467999902</span></p>
         <p><i class="fas fa-envelope-square fa-lg mr-4 icon-light"></i><span class="address-text">support@userndot.com</span></p>
         <p><i class="fas fa-map-marker fa-lg mr-4 icon-light"></i><span class="address-text">F-424, Phase 2, New Palam Vihar, Sector 112, Gurugram</span></p>
       </div>
-      <div class="col-md-4 col-xs-12 px-3 mx-2 team-box">
+      <div class="col-md-4 col-xs-12 px-3 mt-3 mx-2 ">
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="far fa-user"></i></span>
