--- a/frontend/src/app/landing-page-und/landing-page-und.component.html
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.html
@@ -47,53 +47,53 @@
   <!--Section How does it Work-->
 
   <!--<section class="py-5 px-4 container">-->
-    <!--<div class="row justify-content-center py-3 mt-4">-->
-      <!--<h2 class="display-4 text-uppercase text-center col-12">How does it Work?</h2>-->
-      <!--<span class="d-block bg-primary mt-3" style="height: 3px;width: 70px;"></span>-->
-    <!--</div>-->
-    <!--<div class="row py-2 justify-content-center">-->
-      <!--<p class="section-title text-capitalize text-center">We help deliver targeted campaigns with personalized messages-->
-        <!--to users and-->
-        <!--engage them with multiple channels of communication.</p>-->
-    <!--</div>-->
-    <!--<div class="row mt-4 mb-3">-->
-      <!--<div class="col-lg-3 col-md-6 text-center my-3 px-5 px-md-3">-->
-        <!--<i class="fas fa-cogs fa-3x text-primary"></i>-->
-        <!--<h4 class="mt-4">Fully Automated</h4>-->
-        <!--<p class="my-2 py-1 section-paragraph">-->
-          <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius-->
-          <!--eos, fugit hic ipsa magni necessitatibus porro quas repudiandae, tempora, temporibus voluptates. Ab at quaerat-->
-          <!--voluptatibus.-->
-        <!--</p>-->
-      <!--</div>-->
-      <!--<div class="col-lg-3 col-md-6 text-center my-3 px-5 px-md-3">-->
-        <!--<i class="fas fa-clock fa-3x text-primary"></i>-->
-        <!--<h4 class="mt-4">See Real Time Response</h4>-->
-        <!--<p class="my-2 py-1 section-paragraph">-->
-          <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius-->
-          <!--eos, fugit hic ipsa magni necessitatibus porro quas repudiandae, tempora, temporibus voluptates. Ab at quaerat-->
-          <!--voluptatibus.-->
-        <!--</p>-->
-      <!--</div>-->
-      <!--<div class="col-lg-3 col-md-6 text-center my-3 px-md-3 px-5">-->
-        <!--<i class="fas fa-compass fa-3x text-primary"></i>-->
-        <!--<h4 class="mt-4">Geolocation Targeting</h4>-->
-        <!--<p class="my-2 py-1 section-paragraph">-->
-          <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius-->
-          <!--eos, fugit hic ipsa magni necessitatibus porro quas repudiandae, tempora, temporibus voluptates. Ab at quaerat-->
-          <!--voluptatibus.-->
-        <!--</p>-->
-      <!--</div>-->
-      <!--<div class="col-lg-3 col-md-6 text-center my-3 px-md-3 px-5">-->
-        <!--<i class="far fa-user-circle fa-3x text-primary"></i>-->
-        <!--<h4 class="mt-4">Personalization</h4>-->
-        <!--<p class="my-2 py-1 section-paragraph">-->
-          <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius-->
-          <!--eos, fugit hic ipsa magni necessitatibus porro quas repudiandae, tempora, temporibus voluptates. Ab at quaerat-->
-          <!--voluptatibus.-->
-        <!--</p>-->
-      <!--</div>-->
-    <!--</div>-->
+  <!--<div class="row justify-content-center py-3 mt-4">-->
+  <!--<h2 class="display-4 text-uppercase text-center col-12">How does it Work?</h2>-->
+  <!--<span class="d-block bg-primary mt-3" style="height: 3px;width: 70px;"></span>-->
+  <!--</div>-->
+  <!--<div class="row py-2 justify-content-center">-->
+  <!--<p class="section-title text-capitalize text-center">We help deliver targeted campaigns with personalized messages-->
+  <!--to users and-->
+  <!--engage them with multiple channels of communication.</p>-->
+  <!--</div>-->
+  <!--<div class="row mt-4 mb-3">-->
+  <!--<div class="col-lg-3 col-md-6 text-center my-3 px-5 px-md-3">-->
+  <!--<i class="fas fa-cogs fa-3x text-primary"></i>-->
+  <!--<h4 class="mt-4">Fully Automated</h4>-->
+  <!--<p class="my-2 py-1 section-paragraph">-->
+  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius-->
+  <!--eos, fugit hic ipsa magni necessitatibus porro quas repudiandae, tempora, temporibus voluptates. Ab at quaerat-->
+  <!--voluptatibus.-->
+  <!--</p>-->
+  <!--</div>-->
+  <!--<div class="col-lg-3 col-md-6 text-center my-3 px-5 px-md-3">-->
+  <!--<i class="fas fa-clock fa-3x text-primary"></i>-->
+  <!--<h4 class="mt-4">See Real Time Response</h4>-->
+  <!--<p class="my-2 py-1 section-paragraph">-->
+  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius-->
+  <!--eos, fugit hic ipsa magni necessitatibus porro quas repudiandae, tempora, temporibus voluptates. Ab at quaerat-->
+  <!--voluptatibus.-->
+  <!--</p>-->
+  <!--</div>-->
+  <!--<div class="col-lg-3 col-md-6 text-center my-3 px-md-3 px-5">-->
+  <!--<i class="fas fa-compass fa-3x text-primary"></i>-->
+  <!--<h4 class="mt-4">Geolocation Targeting</h4>-->
+  <!--<p class="my-2 py-1 section-paragraph">-->
+  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius-->
+  <!--eos, fugit hic ipsa magni necessitatibus porro quas repudiandae, tempora, temporibus voluptates. Ab at quaerat-->
+  <!--voluptatibus.-->
+  <!--</p>-->
+  <!--</div>-->
+  <!--<div class="col-lg-3 col-md-6 text-center my-3 px-md-3 px-5">-->
+  <!--<i class="far fa-user-circle fa-3x text-primary"></i>-->
+  <!--<h4 class="mt-4">Personalization</h4>-->
+  <!--<p class="my-2 py-1 section-paragraph">-->
+  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius-->
+  <!--eos, fugit hic ipsa magni necessitatibus porro quas repudiandae, tempora, temporibus voluptates. Ab at quaerat-->
+  <!--voluptatibus.-->
+  <!--</p>-->
+  <!--</div>-->
+  <!--</div>-->
   <!--</section>-->
 
   <!--section benefits-->
@@ -122,14 +122,16 @@
         <div class="text-center bg-light p-5 h-100">
           <i class="fas fa-users fa-5x text-primary icon-light "></i>
           <h4 class="pb-2 pt-4">Keep users engaged</h4>
-          <p class="benefits-paragraph">It helps maintain a better relationship with users by keep them engaged with right things at right time</p>
+          <p class="benefits-paragraph">It helps maintain a better relationship with users by keep them engaged with
+            right things at right time</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 my-3">
         <div class="text-center bg-light p-5 h-100">
           <i class="fas fa-chart-line fa-5x text-primary icon-light"></i>
           <h5 class="pb-2 pt-4">Higher ROI</h5>
-          <p class="benefits-paragraph">If used with correct messaging, you a higher Return on investment for marketing is achievable</p>
+          <p class="benefits-paragraph">If used with correct messaging, you a higher Return on investment for marketing
+            is achievable</p>
         </div>
       </div>
     </div>
@@ -156,7 +158,8 @@
             <div class="col-12">
               <p class="font-weight-bold section-title text-uppercase mb-0" style="letter-spacing: 2px;">
                 <i class="fas fa-tasks mr-3 text-primary fa-lg icon-light"></i>A/B Testing / Experiment</p>
-              <p class="section-paragraph ml-4 pl-4">Experiment with different kind of messaging and keep the best, and gradually reach towards the ideal.
+              <p class="section-paragraph ml-4 pl-4">Experiment with different kind of messaging and keep the best, and
+                gradually reach towards the ideal.
               </p>
             </div>
             <div class="col-12">
@@ -168,7 +171,8 @@
             <div class="col-12">
               <p class="font-weight-bold section-title text-uppercase mb-0" style="letter-spacing: 2px;">
                 <i class="fas fa-envelope-square mr-3 text-primary fa-lg icon-light"></i>Customized messaging</p>
-              <p class="section-paragraph ml-4 pl-4">Use the details and behaviour of your user to send them custom messages.
+              <p class="section-paragraph ml-4 pl-4">Use the details and behaviour of your user to send them custom
+                messages.
               </p>
             </div>
           </div>
@@ -214,50 +218,62 @@
   <!--Section Testimonials-->
 
   <!--<section class="py-5 px-4 container-fluid section-testimonials">-->
-    <!--<div class="container">-->
-      <!--<div class="row justify-content-center py-3 mt-4">-->
-        <!--<h2 class="display-4 text-uppercase text-center col-12">Testimonials</h2>-->
-        <!--<span class="d-block bg-primary mt-3" style="height: 3px;width: 70px;"></span>-->
-      <!--</div>-->
-      <!--<div class="row my-5 pt-5 pb-2">-->
-        <!--<div class="col-md font-italic">-->
-          <!--<blockquote>-->
-            <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur-->
-            <!--et-->
-            <!--ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.-->
-            <!--<cite class="d-block text-right mt-1 mr-3">-Laksh Bhutani</cite>-->
-          <!--</blockquote>-->
-        <!--</div>-->
-        <!--<div class="col-md font-italic">-->
-          <!--<blockquote>-->
-            <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur-->
-            <!--et-->
-            <!--ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.-->
-            <!--<cite class="d-block text-right mt-1 mr-3">-Mark ZuckerBerg</cite>-->
-          <!--</blockquote>-->
-        <!--</div>-->
-        <!--<div class="col-md font-italic">-->
-          <!--<blockquote>-->
-            <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur-->
-            <!--et-->
-            <!--ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.-->
-            <!--<cite class="d-block text-right mt-1 mr-3">-Jeff Bezos</cite>-->
-          <!--</blockquote>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
+  <!--<div class="container">-->
+  <!--<div class="row justify-content-center py-3 mt-4">-->
+  <!--<h2 class="display-4 text-uppercase text-center col-12">Testimonials</h2>-->
+  <!--<span class="d-block bg-primary mt-3" style="height: 3px;width: 70px;"></span>-->
+  <!--</div>-->
+  <!--<div class="row my-5 pt-5 pb-2">-->
+  <!--<div class="col-md font-italic">-->
+  <!--<blockquote>-->
+  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur-->
+  <!--et-->
+  <!--ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.-->
+  <!--<cite class="d-block text-right mt-1 mr-3">-Laksh Bhutani</cite>-->
+  <!--</blockquote>-->
+  <!--</div>-->
+  <!--<div class="col-md font-italic">-->
+  <!--<blockquote>-->
+  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur-->
+  <!--et-->
+  <!--ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.-->
+  <!--<cite class="d-block text-right mt-1 mr-3">-Mark ZuckerBerg</cite>-->
+  <!--</blockquote>-->
+  <!--</div>-->
+  <!--<div class="col-md font-italic">-->
+  <!--<blockquote>-->
+  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur-->
+  <!--et-->
+  <!--ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.-->
+  <!--<cite class="d-block text-right mt-1 mr-3">-Jeff Bezos</cite>-->
+  <!--</blockquote>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
   <!--</section>-->
 
   <!--Section Success Indicators-->
   <section class="py-5 px-4 container">
-    <div class="row">
-      <div class="col-md-6">
-        <p class="mb-0"><span class="text-primary display-2">25</span><i class="fas fa-percent fa-2x ml-2 mr-3 text-primary"></i>less lead conversion time</p>
-        <p class="mb-0"><span class="text-primary display-2">150</span><i class="fas fa-percent fa-2x ml-2 mr-3 text-primary"></i>increase in ROI for marketing</p>
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-3 col-sm-6 text-center mt-2">
+        <span class="text-primary display-3 icon-light">25</span>
+        <i class="fas fa-percent ml-0 fa-2x  mr-3 text-primary icon-light"></i>
+        <p class="font-weight-bold success-indicators-text text-capitalize">less lead conversion time</p>
       </div>
-      <div class="col-md-6">
-        <p class="mb-0"><span class="text-primary display-2">70</span><i class="fas fa-percent fa-2x ml-2 mr-3 text-primary"></i>increase in user retention</p>
-        <p class="mb-0"><span class="text-primary display-2">80</span><i class="fas fa-percent fa-2x ml-2 mr-3 text-primary"></i>increase in customer conversion ratio</p>
+      <div class="col-md-3 col-sm-6 text-center mt-2">
+        <span class="text-primary display-3 icon-light">150</span>
+        <i class="fas fa-percent ml-0 fa-2x  mr-3 text-primary icon-light"></i>
+        <p class="font-weight-bold success-indicators-text text-capitalize">increase in ROI for marketing</p>
+      </div>
+      <div class="col-md-3 col-sm-6 text-center mt-2">
+        <span class="text-primary display-3 icon-light">70</span>
+        <i class="fas fa-percent ml-0 fa-2x  mr-3 text-primary icon-light"></i>
+        <p class="font-weight-bold success-indicators-text text-capitalize">increase in User retention</p>
+      </div>
+      <div class="col-md-3 col-sm-6 text-center mt-2">
+        <span class="text-primary display-3 icon-light">80</span>
+        <i class="fas fa-percent ml-0 fa-2x  mr-3 text-primary icon-light"></i>
+        <p class="font-weight-bold success-indicators-text text-capitalize">increase in customer conversion ratio</p>
       </div>
     </div>
   </section>
