--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="fluid">
   <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-    <a class="navbar-brand" [routerLink]="['/']">UserNDot</a>
+    <a class="navbar-brand" [routerLink]="['/dashboard']">UserNDot</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
