--- a/frontend/src/app/segment-category/date-comparator/date-comparator.component.html
+++ b/frontend/src/app/segment-category/date-comparator/date-comparator.component.html
@@ -16,17 +16,19 @@
 <div class="form-group m-2 d-inline-flex" *ngIf="!hideElementDatepicker" style="position: relative;">
   <span class="input-group-btn datepicker">
     <input type="text" class="form-control"
-           name="daterange"
+           name="singleDatePicker"
            daterangepicker
            [options]="singlePicker"
-           (selected)="singleSelect($event)"/>
+           (selected)="singleSelect($event)"
+           #singleDatePicker/>
   </span>
   <span class="ml-1 calendar-icon"><i class="far fa-calendar-alt"></i></span>
 </div>
 <div class="form-group m-2 d-inline-flex" *ngIf="!hideElementDaterangepicker" style="position: relative;">
   <span class="input-group-btn datepicker">
     <input type="text" class="form-control" name="daterange" daterangepicker [options]="multiPicker"
-           (selected)="selectedDate($event, daterange)"/>
+           (selected)="selectedDate($event, daterange)"
+    />
   </span>
   <span class="ml-1 calendar-icon"><i class="far fa-calendar-alt"></i></span>
 </div>
