Major Bugs resolved in TinyMCE

--- a/frontend/src/app/templates/email-templates/email-templates.component.html
+++ b/frontend/src/app/templates/email-templates/email-templates.component.html
@@ -18,7 +18,8 @@
           </button>
         </div>
         <div class="modal-body">
-          <app-create-email-template-form></app-create-email-template-form>
+          <ng-template #container></ng-template>
+          <!--<app-create-email-template-form></app-create-email-template-form>-->
         </div>
       </div>
     </div>
