--- a/frontend/src/app/segment-category/did-events/did-event/did-event.component.html
+++ b/frontend/src/app/segment-category/did-events/did-event/did-event.component.html
@@ -34,37 +34,20 @@
   </div>
   <div class="form-inline" *ngIf="!hideWhere && eventSelected">
     <div class="form-group pr-0 ml-3">
-      <select class="form-control" (change)="countDropdown($event.target.value)" [(ngModel)]="didEvent.whereFilter.whereFilterName">
-        <option selected disabled>--Select--</option>
+      <select class="form-control" (change)="countDropdown($event.target.value)"
+              [(ngModel)]="didEvent.whereFilter.whereFilterName">
         <option value="Count">Count</option>
         <option value="SumOfValuesOf" *ngIf="getNumberTypeEventProperties().length>0">Property Sum Of</option>
       </select>
     </div>
     <div class="form-group ml-2" *ngIf="!hidePropertySumFilter && getNumberTypeEventProperties().length>0">
-      <select class="form-control">
+      <select class="form-control" [(ngModel)]="didEvent.whereFilter.propertyName">
         <option *ngFor="let prop of getNumberTypeEventProperties()" [value]="prop.name">{{prop.name}}</option>
       </select>
     </div>
-    <app-number-comparator [(operator)]="didEvent.whereFilter.operator" [(values)]="didEvent.whereFilter.values" [numberComparatorOperators]="['Equals', 'Between', 'GreaterThan', 'LessThan']"></app-number-comparator>
-    <!--<div class="form-group mb-3 col-3 px-0 custom-left">-->
-      <!--<select class="form-control col-12"-->
-              <!--(change)="whereDropdown($event.target.value)"-->
-              <!--[ngStyle]="{'right':hidePropertySumFilter ===false?'35px':'0'}">-->
-        <!--<option selected>≥&nbsp;&nbsp;(greater or equals)</option>-->
-        <!--<option>≏&nbsp;&nbsp;(Between)</option>-->
-        <!--<option>≤&nbsp;&nbsp;(less than or equals)</option>-->
-        <!--<option>=&nbsp;&nbsp;(equals)</option>-->
-      <!--</select>-->
-    <!--</div>-->
-    <!--<div class="form-group col-1 mb-3 mr-3 px-0"-->
-         <!--[ngStyle]="{'right':hidePropertySumFilter ===false?'35px':'0'}">-->
-      <!--<input type="number" class="form-control col-12" value="1" min="1">-->
-    <!--</div>-->
-    <!--<div class="form-group col-1 mb-3 px-0"-->
-         <!--[hidden]="hideElementInput"-->
-         <!--[ngStyle]="{'right':hidePropertySumFilter ===false?'31px':'0'}">-->
-      <!--<input type="number" class="form-control col-12" value="1" min="1">-->
-    <!--</div>-->
-
+    <app-number-comparator class="ml-2"
+                           [(operator)]="didEvent.whereFilter.operator"
+                           [(values)]="didEvent.whereFilter.values"
+                           [numberComparatorOperators]="['Equals', 'Between', 'GreaterThan', 'LessThan']"></app-number-comparator>
   </div>
 </div>
