--- a/frontend/src/app/conversion-events-graph/conversion-events-graph.component.html
+++ b/frontend/src/app/conversion-events-graph/conversion-events-graph.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    New Users
+    Conversion Events
   </div>
   <div class="card-body p-3">
     <div class="row">
@@ -16,12 +16,12 @@
     </div>
     <div style="display: block;margin: 0 auto;">
       <canvas baseChart
-              [datasets]="newUsersChartData"
-              [labels]="newUsersChartLabels"
-              [options]="newUsersChartOptions"
-              [colors]="newUsersChartColors"
-              [legend]="newUsersChartLegend"
-              [chartType]="newUsersChartType"></canvas>
+              [datasets]="conversionEventsChartData"
+              [labels]="conversionEventsChartLabels"
+              [options]="conversionEventsChartOptions"
+              [colors]="conversionEventsChartColors"
+              [legend]="conversionEventsChartLegend"
+              [chartType]="conversionEventsChartType"></canvas>
     </div>
   </div>
 </div>
