--- a/frontend/src/app/events-graph/events-graph.component.html
+++ b/frontend/src/app/events-graph/events-graph.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    New Users
+    Events
   </div>
   <div class="card-body p-3">
     <div class="row">
@@ -16,12 +16,12 @@
     </div>
     <div style="display: block;margin: 0 auto;">
       <canvas baseChart
-              [datasets]="newUsersChartData"
-              [labels]="newUsersChartLabels"
-              [options]="newUsersChartOptions"
-              [colors]="newUsersChartColors"
-              [legend]="newUsersChartLegend"
-              [chartType]="newUsersChartType"></canvas>
+              [datasets]="eventsChartData"
+              [labels]="eventsChartLabels"
+              [options]="eventsChartOptions"
+              [colors]="eventsChartColors"
+              [legend]="eventsChartLegend"
+              [chartType]="eventsChartType"></canvas>
     </div>
   </div>
 </div>
